var inside template

--- a/Web Development w Google`s go/templates/templates/index.gohtml
+++ b/Web Development w Google`s go/templates/templates/index.gohtml
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <div>Index value {{.}}</div>
+    {{$gg := .}}
+    <div>Index value {{$gg}}</div>
 </body>
 </html> 
