pass complex data to template

--- a/Web Development w Google`s go/templates/templates/index.gohtml
+++ b/Web Development w Google`s go/templates/templates/index.gohtml
@@ -5,9 +5,15 @@
     <title>Title</title>
 </head>
 <body>
-    <div>Index</div>
-    {{ range $index, $element := .}}
-    <div>{{$index}}: {{$element}}</div>
+<ul>
+    {{range .Wisdom}}
+        <li>{{.Name}}: "{{.Motto}}"</li>
     {{end}}
+</ul>
+<ul>
+    {{range .Transport}}
+        <li>{{.Manufacturer}} {{.Model}} - {{.Doors}}</li>
+    {{end}}
+</ul>
 </body>
-</html> 
+</html>
