--- a/Web Development w Google`s go/templates/templates/index.gohtml
+++ b/Web Development w Google`s go/templates/templates/index.gohtml
@@ -6,13 +6,13 @@
 </head>
 <body>
 <ul>
-    {{range .Wisdom}}
-        <li>{{.Name}}: "{{.Motto}}"</li>
+    {{range .}}
+        <li>{{uc .Name}}: "{{.Motto}}"</li>
     {{end}}
 </ul>
 <ul>
-    {{range .Transport}}
-        <li>{{.Manufacturer}} {{.Model}} - {{.Doors}}</li>
+    {{range .}}
+        <li>{{ft .Name}}</li>
     {{end}}
 </ul>
 </body>
