--- a/Web Development w Google`s go/state/templates/index.html
+++ b/Web Development w Google`s go/state/templates/index.html
@@ -8,23 +8,10 @@
 </head>
 <body>
     <div>
-        <form method="POST">
-            <label for="firstName">First Name</label>
-            <input type="text" id="firstName" name="first">
-            <br>
-            <label for="lName">Last Name</label>
-            <input type="text" id="lName" name="last">
-            <br>
-            <label for="sub">Subscribe</label>
-            <input type="checkbox" id="sub" name="subscribe">
-            <br>
+        <form method="POST" action="/bar">
+            <input type="text" name="fname" title="fname">
             <input type="submit">
         </form>
-        <br>
-
-        <h1>First: {{.FirstName }}</h1>
-        <h1>Last: {{.LastName }}</h1>
-        <h1>Subscribed: {{.Subscribed }}</h1>
     </div>
 </body>
 </html>
